fix(k8s): add imagePullPolicy to generate secrets job
Merge Request: ralgar/homelab!10

--- a/cluster/platform/vault/generate-secrets.yaml
+++ b/cluster/platform/vault/generate-secrets.yaml
@@ -59,6 +59,7 @@ spec:
       containers:
         - name: apply
           image: registry.gitlab.com/ralgar/vault-generate-secrets:latest
+          imagePullPolicy: IfNotPresent
           env:
             - name: VAULT_ADDR
               value: http://vault:8200
