fix(k8s): make external-secrets depend on vault
Merge Request: ralgar/homelab!11

--- a/cluster/system/flux-cd/sync/platform/external-secrets.yaml
+++ b/cluster/system/flux-cd/sync/platform/external-secrets.yaml
@@ -5,9 +5,8 @@ metadata:
   name: external-secrets
   namespace: flux-system
 spec:
-  # dependsOn:
-  #   - name: trust-manager
-  #   - name: csi-cinder
+  dependsOn:
+    - name: vault
   interval: 60m
   path: ./cluster/platform/external-secrets
   prune: true
