--- a/cluster/platform/postgres/database.yaml
+++ b/cluster/platform/postgres/database.yaml
@@ -34,6 +34,12 @@ spec:
         - radarr-log
       password:
         type: AlphaNumeric
+    - name: sonarr
+      databases:
+        - sonarr-main
+        - sonarr-log
+      password:
+        type: AlphaNumeric
   # patroni:
   #   dynamicConfiguration:
   #     postgresql:
