fix(k8s): increase media app emptyDir limits to 1GiB
Merge Request: ralgar/homelab!15

--- a/cluster/apps/media-server/sonarr/deployment.yaml
+++ b/cluster/apps/media-server/sonarr/deployment.yaml
@@ -92,7 +92,7 @@ spec:
       volumes:
         - name: sonarr-data
           emptyDir:
-            sizeLimit: 16Mi
+            sizeLimit: 1Gi
         - name: media
           persistentVolumeClaim:
             claimName: media
