--- a/cluster/apps/media-server/radarr/deployment.yaml
+++ b/cluster/apps/media-server/radarr/deployment.yaml
@@ -90,7 +90,7 @@ spec:
       volumes:
         - name: radarr-data
           emptyDir:
-            sizeLimit: 16Mi
+            sizeLimit: 1Gi
         - name: media
           persistentVolumeClaim:
             claimName: media
