--- a/cluster/apps/media-server/jellyfin/deployment.yaml
+++ b/cluster/apps/media-server/jellyfin/deployment.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: media-server
   labels:
     app.kubernetes.io/name: jellyfin
+  annotations:
+    ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
 spec:
   revisionHistoryLimit: 3
   replicas: 1
@@ -37,6 +39,13 @@ spec:
             - name: jellyfin-secrets
               mountPath: /secrets
           command: ["/configmaps/init.sh"]
+          resources:
+            limits:
+              cpu: 250m
+              memory: 250Mi
+            requests:
+              cpu: 125m
+              memory: 250Mi
       containers:
         - name: jellyfin
           image: "docker.io/jellyfin/jellyfin:10.8.4"
@@ -53,6 +62,13 @@ spec:
               mountPath: /config
             - name: media
               mountPath: /media
+          resources:
+            limits:
+              cpu: 2000m
+              memory: 2000Mi
+            requests:
+              cpu: 1000m
+              memory: 2000Mi
           livenessProbe:
             exec:
               command:
