--- a/cluster/apps/media-server/nzbget/deployment.yaml
+++ b/cluster/apps/media-server/nzbget/deployment.yaml
@@ -50,7 +50,7 @@ spec:
               memory: 250Mi
       containers:
         - name: nzbget
-          image: "ghcr.io/onedr0p/nzbget:21.1"
+          image: "ghcr.io/ralgar/nzbget:21.1"
           imagePullPolicy: IfNotPresent
           ports:
             - name: nzbget-http
