feat(k8s): backup PgSQL to object storage (!23)
This MR implements the following changes:

- [x] **Implement PostgreSQL backups**
  - [x] Stored in a Google Cloud Storage bucket.
  - [x] Encrypted using a custom password.
  - [x] Daily differential backups, with a full backup every month.
  - [x] Retention currently set to 6 months.
- [x] **Refactor cluster secret seeding** 
  - [x] Seed key/value secrets directly from a single Terraform map variable.
  - [x] Use Flux variable substitution to mutate manifests at apply time.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/23

--- a/cluster/apps/media-server/prowlarr/deployment.yaml
+++ b/cluster/apps/media-server/prowlarr/deployment.yaml
@@ -37,13 +37,13 @@ spec:
             - name: PROWLARR__API_KEY
               valueFrom: { secretKeyRef: { name: prowlarr-secrets, key: prowlarr-api-key } }
             - name: PROWLARR__POSTGRES_HOST
-              valueFrom: { secretKeyRef: { name: mediasrv-pguser-prowlarr, key: host } }
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: host } }
             - name: PROWLARR__POSTGRES_PORT
-              valueFrom: { secretKeyRef: { name: mediasrv-pguser-prowlarr, key: port } }
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: port } }
             - name: PROWLARR__POSTGRES_USER
-              valueFrom: { secretKeyRef: { name: mediasrv-pguser-prowlarr, key: user } }
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: user } }
             - name: PROWLARR__POSTGRES_PASSWORD
-              valueFrom: { secretKeyRef: { name: mediasrv-pguser-prowlarr, key: password } }
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: password } }
             - name: PROWLARR__POSTGRES_MAIN_DB
               value: prowlarr-main
             - name: PROWLARR__POSTGRES_LOG_DB
