--- a/cluster/platform/389ds/secrets.yaml
+++ b/cluster/platform/389ds/secrets.yaml
@@ -2,8 +2,8 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: jellyfin-secrets
-  namespace: media-server
+  name: 389ds-secrets
+  namespace: 389ds
 spec:
   refreshInterval: 1h
   secretStoreRef:
@@ -11,15 +11,11 @@ spec:
     name: vault
   # Kubernetes secret object
   target:
-    name: jellyfin-secrets
+    name: 389ds-secrets
     creationPolicy: Owner
   # Vault secret object
   data:
-    - secretKey: jellyfin-server-id
-      remoteRef:
-        key: /mediasrv/jellyfin
-        property: serverID
-    - secretKey: ldap-bind-password
+    - secretKey: jellyfin-service-password
       remoteRef:
         key: /mediasrv/jellyfin
         property: ldapServiceAccountPassword
