--- a/cluster/platform/vault/generate-secrets.yaml
+++ b/cluster/platform/vault/generate-secrets.yaml
@@ -12,6 +12,10 @@ data:
           length: 32
           special: false
           uppercase: false
+        - key: ldapServiceAccountPassword
+          length: 32
+          special: false
+          uppercase: true
 
     - path: mediasrv/nzbget
       data:
