--- a/cluster/platform/389ds/kustomization.yaml
+++ b/cluster/platform/389ds/kustomization.yaml
@@ -3,7 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - certificate.yaml
+  - configmap.yaml
+  - secrets.yaml
   - service.yaml
   - serviceaccount.yaml
   - storage.yaml
