--- a/cluster/apps/smart-home/mosquitto/kustomization.yaml
+++ b/cluster/apps/smart-home/mosquitto/kustomization.yaml
@@ -2,5 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - hassdb.yaml
-  - mediadb.yaml
+  - configmap.yaml
+  - secrets.yaml
+  - ingress.yaml
+  - statefulset.yaml
