feat(k8s): add ConfigMap vars via Terraform
Adds the ability to define a map of key/value pairs in Terraform, which are then created as a ConfigMap in the K8s cluster. Flux can then use this ConfigMap for variable substitution when applying manifests.

This is a copy of the existing feature to seed Secrets, using the same process.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/29

--- a/infra/modules/openstack/k8s-cluster/modules/flux/templates/sync-values.yaml
+++ b/infra/modules/openstack/k8s-cluster/modules/flux/templates/sync-values.yaml
@@ -17,10 +17,10 @@ kustomization:
     prune: true
     postBuild:
       substituteFrom:
-          # Use this ConfigMap if it exists, but proceed if it doesn't.
+          # Fail if these do not exist.
         - kind: ConfigMap
-          name: cluster-vars
-          optional: true
-          # Fail if this Secret does not exist.
+          name: cluster-config-vars
+          optional: false
         - kind: Secret
           name: cluster-secret-vars
+          optional: false
