fix(k8s): assign static IP to load balancer
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/30

--- a/cluster/system/flux-sync/system/ingress-nginx.yaml
+++ b/cluster/system/flux-sync/system/ingress-nginx.yaml
@@ -14,3 +14,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  postBuild:
+    substitute:
+      LOAD_BALANCER_STATIC_IP: ${LOAD_BALANCER_STATIC_IP}
