chore(metal): merge submodule into main repo
Merges the `metal` submodule into the main repo, to ease development complexity.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/32

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,15 @@ terraform:init:
     - cd ${TF_ROOT}
     - gitlab-terraform init
 
+ansible-lint:
+  stage: lint
+  image: registry.gitlab.com/pipeline-components/ansible-lint:latest
+  rules:
+    - changes:
+        - metal/**/*
+  script:
+    - ansible-lint --show-relpath metal
+
 kube-linter:
   stage: lint
   image:
