chore: change to permissive license
Change to the BSD 2-clause "Simplified" or "FreeBSD" license. This license is simple and permissive, and is better suited for a project of this nature than the previously used GPL 3 license.

https://choosealicense.com/licenses/bsd-2-clause/

NOTE: The markdownlint CI job has also been updated to use a different container, since the previous implementation seemed to have no convenient way of disabling rules on a global or per-file basis.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/33

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,14 +78,16 @@ kube-linter:
 
 markdownlint:
   stage: lint
-  image: registry.gitlab.com/pipeline-components/markdownlint:latest
+  image:
+    name: ghcr.io/igorshubovych/markdownlint-cli:v0.38.0
+    entrypoint: [""]
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       changes:
         - .gitlab-ci.yml
         - "**/*.md"
   script:
-    - mdl --style all .
+    - markdownlint "**/*.md"
 
 terraform:validate:
   stage: lint
